--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div class="header-burger">
                         <span class="header-burger__span"></span>
                     </div>
+<!--                    ===============================================================-->
 
 
                     <picture class="header-logo">
@@ -75,17 +76,18 @@
 <!--===========================section photo========================-->
 
 <section class="photo">
-<!--    <div class="big_container">-->
+    <div>
         <img src="img/image%202.png" alt="" class="left_hedgehog">
         <img src="img/image%203.png" alt="" class="right_hedgehog">
     </div>
 </section>
 
+<!--=============================section-choice=====================-->
 <section class="choice">
     <div class="container">
-        <picture class="big-hedgehog">
+        <picture class="picture-hedgehog">
             <source srcset="./img/hedgehog.png 1x,
-                                                 ./img/hedgehog@2x.png 2x">
+                           ./img/hedgehog@2x.png 2x">
             <img class="big-hedgehog" src="./img/hedgehog@2x.png" alt="hedgehog">
         </picture>
         <ul class="choice-wrapper">
@@ -117,7 +119,7 @@
                     <span class="cards__item__new-price">1 500 ₽</span>
                 </div>
                 <div class="cards__inner">
-                    <img class="cards__item__img" src="./img/hedhehog.png" width="336px" alt="">
+                    <img class="cards__item__img" src="./img/hedgehog.png" width="336px" alt="">
                 </div>
             </div>
             <div class="cards__item two-card">
@@ -128,7 +130,7 @@
                     <span class="cards__item__new-price">2 500 ₽</span>
                 </div>
                 <div class="cards__inner">
-                    <img class="cards__item__img" src="./img/hedhehog.png" width="336px" alt="">
+                    <img class="cards__item__img" src="./img/hedgehog.png" width="336px" alt="">
                 </div>
             </div>
         </div>
@@ -219,6 +221,8 @@
             <p class="footer_info">Указанная стоимость товаров и условия их приобретения действительны на текущую дату.</p>
         </div>
 </footer>
+
+<!--===========================JS========================-->
 
 <script type="javascript" src="JS.js"></script>
 
