--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 <body>
 
 <!--================================header+hero======================-->
+<div class="learn">
+    <div class="block"></div>
+</div>
+
 
 <section class="hero">
+
+
     <div class="container big_container">
         <div class="header">
             <div class="big_container container">
